Fixed a bug and improved link visibility
Fixed a bug where the images and text would have the same transparence
as their background.

Improved visibility of the user links (logout, recent changes, sitemap,
etc)

--- a/css/design.css
+++ b/css/design.css
@@ -425,12 +425,11 @@ body
 
 #wbh-content
 {
-	background-color: #181818;
+	background-color: rgba(24, 24, 24, 0.8);
 	border-radius: 5px;
 	padding: 15px;
 	color: #DEDEDE;
 	min-height: 190px;
-	opacity: 0.8;
 	box-shadow: 0 0 2em #181818;
 }
 
@@ -513,6 +512,7 @@ body
 	text-shadow: 0 0 0.5em #000, 0 0 0.5em #000, 0 0 0.5em #000, 0 0 0.5em #000, 0 0 0.5em #000, 0 0 0.8em #000, 0 0 0.8em #000, 0 0 0.8em #000, 0 0 0.8em #000;
 	text-decoration: none;
 	transition: all 500ms;
+	color: #fff;
 }
 
 .tools.group a:link:hover, .tools.group a:visited:hover,
